--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "vue-infinite-loading": "^2.4.5"
   },
   "devDependencies": {
     "vue-svg-loader": "^0.16.0"
