--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "vetur.grammar.customBlocks": {
-    "page-query": "graphql"
+    "page-query": "graphql",
+    "static-query": "graphql"
   }
 }
